Closed Bug 1879805 Opened 9 months ago Closed 6 months ago

[win11] Some button text is not visible with High Contrast Night Sky enabled

Categories

(Core :: CSS Parsing and Computation, defect)

Desktop
Windows 11
defect

Tracking

()

VERIFIED FIXED
128 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- wontfix
firefox123 --- wontfix
firefox124 --- wontfix
firefox126 --- wontfix
firefox127 --- wontfix
firefox128 --- verified

People

(Reporter: atrif, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image HCM.gif

Found in

  • 123.0b9

Affected versions

  • 124.0a1 (2024-02-11)
  • 123.0b9
  • 122.0.1

Tested platforms

  • Affected platforms: Windows 11x64
  • Unaffected platforms: Ubuntu 22, macOS 12

Preconditions

  • Night Sky High Contrast system theme enabled

Steps to reproduce

  1. Open Profile Manager or About Firefox window to update Firefox.
  2. Cycle through the Profile buttons or observe the Restart to Update button.

Expected result

  • The button text is readable.

Actual result

  • The button text is not readable.

Regression range

Additional notes

  • Attached a screen recording.
  • This applies to keyboard-selected buttons!

:emilio, since you are the author of the regressor, bug 1789214, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

I believe this is bug 1879386.

Status: NEW → RESOLVED
Closed: 9 months ago
Duplicate of bug: 1879386
Flags: needinfo?(emilio)
Resolution: --- → DUPLICATE

Emilio, it seems that the Bug 1879386 didn't resolve this issue as well. I am still able to reproduce the bug described in comment 0 on latest Nightly 127.0a1 with Win 11. Can you please take a look?

Flags: needinfo?(emilio)

So that they work properly in HCM.

Assignee: nobody → emilio
Assignee: emilio → nobody
Status: RESOLVED → REOPENED
No longer duplicate of bug: 1879386
Flags: needinfo?(emilio)
Resolution: DUPLICATE → ---
Assignee: nobody → emilio
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7e2e3736640f Use appropriate system colors for windows buttons. r=desktop-theme-reviewers,Itiel
Status: REOPENED → RESOLVED
Closed: 9 months ago6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox127 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Comment on attachment 9400981 [details]
Bug 1879805 - Use appropriate system colors for windows buttons. r=#theme!

Beta/Release Uplift Approval Request

  • User impact if declined: Fixes contrast issues in HCM
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Medium
  • Why is the change risky/not risky? (and alternatives if risky): non-trivial CSS change but windows-specific, and mostly HCM-specific...
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9400981 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

I have verified this issue as fixed on latest Nightly 128.0a1 with Win 11. Tested with "Dusk" and "Night sky" high contrast themes.

Comment on attachment 9400981 [details]
Bug 1879805 - Use appropriate system colors for windows buttons. r=#theme!

That feels a bit risky for a regression we have already shipped multiple releases with, let's have it ride the 128 train, thanks.

Attachment #9400981 - Flags: approval-mozilla-beta? → approval-mozilla-beta-

Closing this as verified fixed per my previous verification since the patch is not going to be uplifted in Beta as well.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: