Bug 1879805 - Use appropriate system colors for windows buttons. r=desktop-theme-reviewers,Itiel

So that they work properly in HCM.

Differential Revision: https://phabricator.services.mozilla.com/D209969